--- a/ecomerce/index.html
+++ b/ecomerce/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-commerce</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <style>
+      body {
+        font-family: 'Montserrat', Arial, Helvetica, sans-serif !important;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
